# pi-grok-build

./: .gitmodules  AGENTS.md  CHANGELOG.MD  CHANGELOG.zh-CN.md  Cargo.toml  FEATURE_MATRIX.md  FEATURE_MATRIX.zh-CN.md  LICENSE  NATIVE_GROK_TUI_ALIGNMENT.md  NATIVE_GROK_TUI_ALIGNMENT.zh-CN.md  README.md  README.zh-CN.md  VERIFICATION.md  VERIFICATION.zh-CN.md  build.sh  install.ps1  install.sh  run-local.sh
.github/workflows/: release.yml  website.yml
.grok-pi/: pi-resources.toml
crates/codegen/pi-grok-adapter/: Cargo.toml  README.md
crates/codegen/pi-grok-adapter/docs/: grok_uploaded_baseline_sha256.json  native-grok-verification.json  native_renderer_sha256.json
crates/codegen/pi-grok-adapter/scripts/: verify_native_grok.py
crates/codegen/pi-grok-adapter/src/: background_bash_bridge.rs  cache_metrics.rs  context_projection.rs  goal_host.rs  lib.rs  model.rs  pi_adapter.rs  pi_rpc.rs  pi_workflow_backend.rs  plan_mode.rs  psm_session_catalog.rs  queue_bridge.rs  subagent_projection.rs  todo_bridge.rs  tool_projection.rs  workflow_host.rs
docs/: rust-tui-design.md
docs/investigation/: breathing-animation-debug.md
docs/issues/: 20260719-原生 Pi 斜杠命令桥接.md  20260721-queue-cancel-alignment.md  queue-architecture-redesign-handoff.md  queue-architecture-redesign.md  queue-redesign-feasibility.md
docs/upstream/: UPSTREAM_CHANGELOG.md
extensions/pi-grok-auth/: index.ts
extensions/pi-grok-bash/: index.ts
extensions/pi-grok-context/: index.ts
extensions/pi-grok-export/: index.ts
extensions/pi-grok-goal/: index.ts
extensions/pi-grok-native-commands/: index.ts
extensions/pi-grok-plan-mode/: index.ts
extensions/pi-grok-recap/: index.ts
extensions/pi-grok-remote-tui/: index.ts
extensions/pi-grok-rpc-compat/: index.ts
extensions/pi-grok-rust-tui-bridge/: index.ts
extensions/pi-grok-shortcut-manager/: index.ts
extensions/pi-grok-subagents/: index.ts  package.json
extensions/pi-grok-workflows/: index.ts  package.json
website/: package-lock.json  package.json
work/20260708-grok-pi-plan-mode/: decisions.md  implementation-log.md  pdca.md  prompt.md  state.json  task.md
(+354 files in other folders)
