[package]
name = "pi-grok-adapter"
version = "0.4.0"
edition.workspace = true
license = "Apache-2.0"
publish = false
description = "Headless Pi JSONL RPC to ACP adapter for the native Grok Build pager"

[lib]
name = "pi_grok_adapter"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# unbounded_depth: Pi get_tree is a deep recursive {entry,children} payload;
# default serde_json recursion limit (~128) fails on long sessions and left
# /tree stuck on "Fetching Pi get_tree…".
serde_json = { workspace = true, features = ["unbounded_depth"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt", "macros", "time"] }
tracing = { workspace = true }
xai-acp-lib = { workspace = true }
xai-workflow = { path = "../xai-workflow" }
xai-grok-shell = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = { workspace = true }
